--- a/src/app/tabs/tabs.component.html
+++ b/src/app/tabs/tabs.component.html
@@ -1,24 +1,20 @@
 <ion-tabs>
 	<ion-tab-bar slot="bottom">
-		<ion-tab-button tab="schedule">
-			<ion-icon name="calendar"></ion-icon>
-			<ion-label>Schedule</ion-label>
-			<ion-badge>6</ion-badge>
+		<ion-tab-button tab="home">
+			<ion-icon name="home-outline"></ion-icon>
 		</ion-tab-button>
 
 		<ion-tab-button tab="speakers">
-			<ion-icon name="person-circle"></ion-icon>
-			<ion-label>Speakers</ion-label>
+			<ion-icon name="search-outline"></ion-icon>
 		</ion-tab-button>
 
 		<ion-tab-button tab="map">
-			<ion-icon name="map"></ion-icon>
-			<ion-label>Map</ion-label>
+			<ion-badge color="primary">11</ion-badge>
+			<ion-icon name="notifications-outline"></ion-icon>
 		</ion-tab-button>
 
 		<ion-tab-button tab="about">
-			<ion-icon name="information-circle"></ion-icon>
-			<ion-label>About</ion-label>
+			<ion-icon name="mail-outline"></ion-icon>
 		</ion-tab-button>
 	</ion-tab-bar>
 </ion-tabs>
