--- a/src/app/home/home.component.html
+++ b/src/app/home/home.component.html
@@ -1,8 +1,36 @@
+<ion-header>
+	<ion-toolbar>
+		<ion-buttons slot="start">
+			<ion-button>
+				<ion-icon name="menu-outline"></ion-icon>
+			</ion-button>
+		</ion-buttons>
+		<ion-title>
+			<ion-icon name="logo-twitter" color="primary" size="large"></ion-icon>
+		</ion-title>
+		<ion-buttons slot="end">
+			<ion-button>
+				<ion-icon name="pulse-outline"></ion-icon>
+			</ion-button>
+		</ion-buttons>
+	</ion-toolbar>
+</ion-header>
+
 <ion-content>
-	<ion-list *ngIf="users$">
-		<ion-item *ngFor="let user of users$">
-			<ion-label>{{ user.username }}</ion-label>
-			<ion-label>{{ user.attachment }}</ion-label>
-		</ion-item>
-	</ion-list>
+	<ion-segment value="home" mode="md">
+		<ion-segment-button value="home">
+			<ion-label>Home</ion-label>
+		</ion-segment-button>
+		<ion-segment-button value="test">
+			<ion-label>TimeLine</ion-label>
+		</ion-segment-button>
+	</ion-segment>
+
+	<ion-slides [options]="slideOptions" mode="md">
+		<ion-slide *ngFor="let user of (users | async)">
+			<ion-avatar>
+				<img [src]="user.avatar" />
+			</ion-avatar>
+		</ion-slide>
+	</ion-slides>
 </ion-content>
