--- a/src/app/tabs/tabs.component.html
+++ b/src/app/tabs/tabs.component.html
@@ -13,8 +13,8 @@
 			<ion-icon name="notifications-outline"></ion-icon>
 		</ion-tab-button>
 
-		<ion-tab-button tab="about">
-			<ion-icon name="mail-outline"></ion-icon>
+		<ion-tab-button tab="register">
+			<ion-icon name="log-in-outline"></ion-icon>
 		</ion-tab-button>
 	</ion-tab-bar>
 </ion-tabs>
