--- a/src/app/home/home.component.scss
+++ b/src/app/home/home.component.scss
@@ -1,4 +1,34 @@
+ion-avatar,
+ion-avatar > img {
+	border-radius: 50%;
+	height: 3rem;
+	width: 3rem;
+}
+
 ion-avatar {
-	width: 80px;
-	--border-radius: 200px;
+	padding: 2px;
+	border: 1px solid #3880ff;
+}
+
+ion-toolbar {
+	--border-style: none;
+}
+
+ion-header {
+	background: #fff;
+}
+
+ion-slides {
+	padding-top: 8px;
+	padding-bottom: 8px;
+	border-bottom: 1px solid #f1f1f1;
+}
+
+ion-segment {
+	z-index: 10;
+	background: #fff;
+}
+
+ion-segment-button {
+	text-transform: none;
 }
