--- a/src/app/home/home.component.html
+++ b/src/app/home/home.component.html
@@ -21,7 +21,7 @@
 		<ion-label>Home</ion-label>
 	</ion-segment-button>
 	<ion-segment-button value="content">
-		<ion-label>Timeline</ion-label>
+		<ion-label>Timelinne</ion-label>
 	</ion-segment-button>
 </ion-segment>
 
